if(NOT WIN32)
	ADD_SUBDIRECTORY( EPFLLib )
endif(NOT WIN32)
ADD_SUBDIRECTORY( MPILib)
ADD_SUBDIRECTORY( GeomLib)
ADD_SUBDIRECTORY( NumtoolsLib )
ADD_SUBDIRECTORY( TwoDLib )
ADD_SUBDIRECTORY( MiindPythonLib )
if(ENABLE_CUDA)
if(APPLE)
message("Ignoring CudaTwoDlib. No good Cuda support for Mac")
else(APPLE)
ADD_SUBDIRECTORY( CudaTwoDLib )
ADD_SUBDIRECTORY( MiindLib )
ADD_SUBDIRECTORY( MiindPythonGPULib )
endif(APPLE)
endif(ENABLE_CUDA)
